--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <input type="checkbox" id="menu_toggle" />
                     <label for="menu_toggle">&#9776</label>
                     <nav id="mobile-nav">
-                       <ul>
+                       <ul id="mobile-menu-nav">
                            <li><a href="#">Sounds</a></li>
                            <li><a href="#">Skills</a></li>
                            <li><a href="#">Plugins</a></li>
